[package]
name = "frooxengine-data-tree"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[features]
default = ["std", "alloc", "serde/std", "serde/alloc"]
serde = ["dep:serde", "dep:bson"]
std = ["alloc", "thiserror"]
alloc = []
lz4 = ["dep:lz4"]
lzma = ["dep:seven_zip"]
brotli = ["dep:brotli"]
legacy = []

[dependencies]
brotli = { version = "5.0.0", optional = true }
bson = { version = "2.9.0", optional = true }
lz4 = { version = "1.24.0", optional = true }
serde = { version = "1.0.200", optional = true }
seven_zip = { git = "https://github.com/ThomFox/seven_zip", version = "0.1.0", optional = true }
thiserror = { version = "1.0.59", optional = true }
variant-compression-2 = { git = "https://github.com/KisaragiEffective/vbyte-compression/", branch = "kisaragi", version = "0.2.0" }

[[example]]
name = "frdt_ex"
required-features = ["serde", "lz4", "lzma", "brotli", "legacy"]
edition = "2021"
